--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <img class="icon" src="./img/icon/bilibili.jpeg" />
                     <div class="title">bilibili</div>
                 </div>
-                <div class="shortcut" onclick="Win10.openUrl('https://bilibili.com',
-                 '<img class=\'icon\' src=\'./img/icon/win10.png\'/>Win10-UI官网')">
-                    <img class="icon" src="./img/icon/win10.png" />
-                    <div class="title">test only</div>
+                <div class="shortcut" onclick="Win10.openUrl('https://github.com',
+                 '<img class=\'icon\' src=\'./img/icon/github.png\'/>Github Online')">
+                    <img class="icon" src="./img/icon/github.png" />
+                    <div class="title">Github</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('http://windows.lyfls.top',
                  '<img class=\'icon\' src=\'./img/icon/win10.png\'/>Win10-UI官网')">
