--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                     <img class="icon" src="./img/icon/win10.png" />
                     <div class="title">虚拟机</div>
                 </div>
+                <div class="shortcut" onclick="Win10.openUrl('./app/扫雷/main.html',
+                 '<img class=\'icon\' src=\'./app/扫雷/logo.png\'/>扫雷')">
+                    <img class="icon" src="./app/扫雷/logo.png\" />
+                    <div class="title">扫雷</div>
+                </div>
             </div>
             <div id="win10-desktop-scene"></div>
         </div>
