--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <title>WIN10-UI</title>
+    <title>win10 online</title>
     <link rel='Shortcut Icon' type='image/x-icon' href='./img/windows.ico'>
     <script type="text/javascript" src="./js/jquery-2.2.4.min.js"></script>
     <link href="./css/animate.css" rel="stylesheet">
@@ -57,8 +57,8 @@
                     <div class="title">虚拟机</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('./app/扫雷/main.html',
-                 '<img class=\'icon\' src=\'./app/扫雷/logo.png\'/>扫雷')">
-                    <img class="icon" src="./app/扫雷/logo.png\" />
+                 '<img class=\'icon\' src=\'./img/icon/扫雷.png\'/>扫雷')">
+                    <img class="icon" src="./img/icon/扫雷.png\" />
                     <div class="title">扫雷</div>
                 </div>
             </div>
