--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <div class="title">虚拟机</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('./app/扫雷/main.html',
-                 '<img class=\'icon\' src=\'./img/icon/扫雷.png\'/>扫雷')">
+                 '<img class=\'icon\' src=\"./img/icon/扫雷.png\"/>扫雷')">
                     <img class="icon" src="./img/icon/扫雷.png\" />
-                    <div class="title">扫雷</div>
+                    <div class="title">扫雷</div>扫雷
                 </div>
             </div>
             <div id="win10-desktop-scene"></div>
