--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="title">虚拟机</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('./app/扫雷/main.html',
-                 '<img class=\'icon\' src=\"./img/icon/saolei.png\"/>扫雷')">
+                 '<img class=\'icon\' src=\'./img/icon/saolei.png\'/>扫雷')">
                     <img class="icon" src="./img/icon/saolei.png\" />
                     <div class="title">扫雷</div>扫雷
                 </div>
