--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('./app/扫雷/main.html',
                  '<img class=\'icon\' src=\'./img/icon/saolei.png\'/>扫雷')">
-                    <img class="icon" src="./img/icon/saolei.png\" />
-                    <div class="title">扫雷</div>扫雷
-                </div>
+                    <img class="icon" src="./img/icon/saolei.png" />
+                    <div class="title">扫雷</div>
             </div>
             <div id="win10-desktop-scene"></div>
         </div>
