--- a/app/扫雷/main.html
+++ b/app/扫雷/main.html
@@ -306,6 +306,7 @@
             // 失败
             fail (){
                 let bool = confirm('踩到雷，失败了！')
+                Win10.newMsg('没错你的扫雷挂了'，'没错你的扫雷挂了')
                 if(bool){
                     window.location.reload()
                 }
