--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img class="icon" src="./img/icon/bilibili.jpeg" />
                     <div class="title">bilibili</div>
                 </div>
-                <div class="shortcut" onclick="Win10.openUrl('http://windows.lyfls.top',
+                <div class="shortcut" onclick="Win10.openUrl('https://windows.lyfls.top',
                  '<img class=\'icon\' src=\'./img/icon/win10.png\'/>虚拟机')">
                     <img class="icon" src="./img/icon/win10.png" />
                     <div class="title">虚拟机</div>
@@ -60,6 +60,12 @@
                  '<img class=\'icon\' src=\'./img/icon/saolei.png\'/>扫雷')">
                     <img class="icon" src="./img/icon/saolei.png" />
                     <div class="title">扫雷</div>
+                </div>
+                <div class="shortcut" onclick="Win10.openUrl('https://luogu.com',
+                 '<img class=\'icon\' src=\'./img/icon/luogu.png\'/>洛谷')">
+                    <img class="icon" src="./img/icon/luogu.png" />
+                    <div class="title">洛谷</div>
+                </div>
             </div>
             <div id="win10-desktop-scene"></div>
         </div>
