--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img class="icon" src="./img/icon/saolei.png" />
                     <div class="title">扫雷</div>
                 </div>
-                <div class="shortcut" onclick="Win10.openUrl('https://luogu.com',
+                <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
                  '<img class=\'icon\' src=\'./img/icon/luogu.png\'/>洛谷')">
                     <img class="icon" src="./img/icon/luogu.png" />
                     <div class="title">洛谷</div>
