--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <div class="title">扫雷</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
-                 '<img class=\'icon\' src=\'./img/icon/luogu.png\'/>洛谷')">
-                    <img class="icon" src="./img/icon/luogu.png" />
+                 '<img class=\'icon\' src=\'./img/icon/luogu.jpeg\'/>洛谷')">
+                    <img class="icon" src="./img/icon/luogu.jpeg" />
                     <div class="title">洛谷</div>
                 </div>
             </div>
