--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                     <img class="icon" src="./img/icon/saolei.png" />
                     <div class="title">扫雷</div>
                 </div>
+                
+                <div class="shortcut" onclick="Win10.openUrl('https://office.live.com/',
+                 '<img class=\'icon\' src=\'./img/icon/microsoftoffice.png\'/>微软office')">
+                    <img class="icon" src="./img/icon/microsoftoffice.png" />
+                    <div class="title">微软office</div>
+                </div>
                 <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
                  '<img class=\'icon\' src=\'./img/icon/luogu.jpeg\'/>洛谷')">
                     <img class="icon" src="./img/icon/luogu.jpeg" />
