--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </div>
                 
                 <div class="shortcut" onclick="Win10.openUrl('https://office.live.com/',
-                 '<img class=\'icon\' src=\'./img/icon/microsoftoffice.png\'/>微软office')">
-                    <img class="icon" src="./img/icon/microsoftoffice.png" />
+                 '<img class=\'icon\' src=\'./img/icon/microsoftoffice.jpg\'/>微软office')">
+                    <img class="icon" src="./img/icon/microsoftoffice.jpg" />
                     <div class="title">微软office</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
