--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                     <img class="icon" src="./img/icon/luogu.jpeg" />
                     <div class="title">洛谷</div>
                 </div>
+                <div class="shortcut" onclick="Win10.openUrl('https://lyfls.cn',
+                 '<img class=\'icon\' src=\'./img/icon/luogu.jpeg\'/>洛外官网')">
+                    <img class="icon" src="./img/icon/luogu.jpeg" />
+                    <div class="title">洛外官网</div>
+                </div>
+                <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
+                 '<img class=\'icon\' src=\'./img/icon/doc.png\'/>洛谷')">
+                    <img class="icon" src="./img/icon/doc.png" />
+                    <div class="title">班级blog</div>
+                </div>
             </div>
             <div id="win10-desktop-scene"></div>
         </div>
