--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <img class="icon" src="./img/icon/luogu.jpeg" />
                     <div class="title">洛外官网</div>
                 </div>
-                <div class="shortcut" onclick="Win10.openUrl('https://luogu.com.cn',
+                <div class="shortcut" onclick="Win10.openUrl('https://blog.lyfls.top',
                  '<img class=\'icon\' src=\'./img/icon/doc.png\'/>洛谷')">
                     <img class="icon" src="./img/icon/doc.png" />
                     <div class="title">班级blog</div>
