--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="title">洛外官网</div>
                 </div>
                 <div class="shortcut" onclick="Win10.openUrl('https://blog.lyfls.top',
-                 '<img class=\'icon\' src=\'./img/icon/doc.png\'/>洛谷')">
+                 '<img class=\'icon\' src=\'./img/icon/doc.png\'/>班级blog')">
                     <img class="icon" src="./img/icon/doc.png" />
                     <div class="title">班级blog</div>
                 </div>
