--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </div>
     <div id="win10-menu" class="hidden">
         <div class="list win10-menu-hidden animated animated-slideOutLeft">
+            dev tools
             <div class="item"><i class="red icon fa fa-wrench fa-fw"></i><span>API测试</span></div>
             <div class="sub-item" onclick="Win10.openUrl('./child.html','子页')">父子页沟通</div>
             <div class="sub-item" onclick="Win10.commandCenterOpen()">打开消息中心</div>
@@ -110,7 +111,7 @@
         <div class="blocks">
             <div class="menu_group">
                 <div class="title">
-                    应用示例
+                    稍微有点用的磁铁
                 </div>
                 <div loc="1,1" size="6,3" class="block">
                     <div class="content red detail" >
@@ -136,14 +137,14 @@
                 <div loc="5,6" size="2,2" class="block" onclick="win10_forgive_me()">
                     <div class="content red">
                         <div style="text-align: center;font-size: 30px;line-height: 44px"><i class="fa fa-bug fa-fw"></i></div>
-                        <div style="text-align: center;font-size: 16px;line-height: 44px">别点我</div>
+                        <div style="text-align: center;font-size: 16px;line-height: 44px">蓝屏模拟器</div>
                     </div>
                 </div>
             </div>
 
             <div class="menu_group">
                 <div class="title">
-                    常用场景
+                    后期开发使用 未完待续
                 </div>
                 <div loc="1,1" size="4,3" class="block">
                     <div class="content" style="background-color: orangered">
